; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/gspca/extr_sunplus.c_spca504A_acknowledged_command.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/gspca/extr_sunplus.c_spca504A_acknowledged_command.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gspca_dev = type { i64 }

@D_FRAM = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [26 x i8] c"Status 0x%04x Need 0x%04x\00", align 1
@.str.1 = private unnamed_addr constant [28 x i8] c"status 0x%04x after wait %d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.gspca_dev*, i32, i32, i32, i32, i32)* @spca504A_acknowledged_command to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @spca504A_acknowledged_command(%struct.gspca_dev* %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5) #0 {
  %7 = alloca %struct.gspca_dev*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store %struct.gspca_dev* %0, %struct.gspca_dev** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  store i32 %5, i32* %12, align 4
  %14 = load %struct.gspca_dev*, %struct.gspca_dev** %7, align 8
  %15 = load i32, i32* %8, align 4
  %16 = load i32, i32* %9, align 4
  %17 = load i32, i32* %10, align 4
  %18 = call i32 @reg_w_riv(%struct.gspca_dev* %14, i32 %15, i32 %16, i32 %17)
  %19 = load %struct.gspca_dev*, %struct.gspca_dev** %7, align 8
  %20 = call i32 @reg_r_12(%struct.gspca_dev* %19, i32 1, i32 1, i32 1)
  store i32 %20, i32* %13, align 4
  %21 = load %struct.gspca_dev*, %struct.gspca_dev** %7, align 8
  %22 = getelementptr inbounds %struct.gspca_dev, %struct.gspca_dev* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = icmp slt i64 %23, 0
  br i1 %24, label %25, label %26

25:                                               ; preds = %6
  br label %53

26:                                               ; preds = %6
  %27 = load i32, i32* @D_FRAM, align 4
  %28 = load i32, i32* %13, align 4
  %29 = load i32, i32* %11, align 4
  %30 = call i32 @PDEBUG(i32 %27, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0), i32 %28, i32 %29)
  %31 = load i32, i32* %12, align 4
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %34, label %33

33:                                               ; preds = %26
  br label %53

34:                                               ; preds = %26
  store i32 200, i32* %12, align 4
  br label %35

35:                                               ; preds = %52, %34
  %36 = load i32, i32* %12, align 4
  %37 = add nsw i32 %36, -1
  store i32 %37, i32* %12, align 4
  %38 = icmp sgt i32 %37, 0
  br i1 %38, label %39, label %53

39:                                               ; preds = %35
  %40 = call i32 @msleep(i32 10)
  %41 = load %struct.gspca_dev*, %struct.gspca_dev** %7, align 8
  %42 = call i32 @reg_r_12(%struct.gspca_dev* %41, i32 1, i32 1, i32 1)
  store i32 %42, i32* %13, align 4
  %43 = load i32, i32* %13, align 4
  %44 = load i32, i32* %11, align 4
  %45 = icmp eq i32 %43, %44
  br i1 %45, label %46, label %52

46:                                               ; preds = %39
  %47 = load i32, i32* @D_FRAM, align 4
  %48 = load i32, i32* %13, align 4
  %49 = load i32, i32* %12, align 4
  %50 = sub nsw i32 200, %49
  %51 = call i32 @PDEBUG(i32 %47, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.1, i64 0, i64 0), i32 %48, i32 %50)
  br label %53

52:                                               ; preds = %39
  br label %35

53:                                               ; preds = %25, %33, %46, %35
  ret void
}

declare dso_local i32 @reg_w_riv(%struct.gspca_dev*, i32, i32, i32) #1

declare dso_local i32 @reg_r_12(%struct.gspca_dev*, i32, i32, i32) #1

declare dso_local i32 @PDEBUG(i32, i8*, i32, i32) #1

declare dso_local i32 @msleep(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
